# cmake-rust-demo

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE-MIT.md  README.md  run-clang-format.sh
.github/workflows/: main.yml
app/: CMakeLists.txt  app.c
app_c/: CMakeLists.txt
app_rust/: CMakeLists.txt  Cargo.toml  build.rs
app_rust/src/: main.rs
cmake/: FindRust.cmake
common/: CMakeLists.txt
common/gen_uuid/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  gen_uuid.h  gen_uuid.rs
common/gen_uuid/src/: lib.rs
lib/: CMakeLists.txt  cmakerust-version.h.in  cmakerust.h  lib.c  lib_private.h
lib/c/: CMakeLists.txt  demo.c  demo.h  dostuff.c  dostuff.h
lib/colorlog/: Cargo.toml  cbindgen.toml  colorlog.h  colorlog.rs
lib/rust/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
lib/rust/src/: colorlog.rs  do_thing.rs  lib.rs  sys.rs
test/: CMakeLists.txt
