[package]
name = "colorlog"
version = "0.1.0"
authors = ["Micah Snyder <micasnyd@cisco.com>"]
edition = "2018"

[lib]
name = "colorlog"
path = "colorlog.rs"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
